--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,10 @@
   "devDependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.4",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.2",
+    "jest": "^26.0.1",
     "lodash": "^4.0.1",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "supertest": "^4.0.2"
   }
 }
