--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "lodash": "^4.0.1",
     "morgan": "^1.6.1",
     "supertest": "^4.0.2"
+  },
+  "dependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
